  the master/detail navigation. All function can have two parameters that are referring the master
  and detail contexts.
      INTERMediatorOnPage.naviBeforeMoveToDetail
      INTERMediatorOnPage.naviAfterMoveToDetail
      INTERMediatorOnPage.naviBeforeMoveToMaster
      INTERMediatorOnPage.naviAfterMoveToMaster
- [BUG FIX] The definition file editor supports the 'soft-delete' key, and also the field which
  cant contain ether boolean or string value appropriately.
- [BUG FIX] Fix an error when the value of 'operator' key in 'query' key is '=' in a definition 
  file using FileMaker Server.
- [BUG FIX] Calculation bug fixed. In case of multiple uses of a calculated property.
- [BUG FIX] Fix 'inline' and 'end-of-sibling' key options of validation. The affected version is 
  5.1 only.
- [BUG FIX] A term of the "send-mail" in DefinitionChecker class was wrong.
- [BUG FIX] Some value in the Local Context weren't archived.
- [BUG FIX] Parser had a bug for multiple references in a page.
- [BUG FIX] PDO class had a bug for authentication but it would affect in a rare case.

Ver.5.1 (May 22, 2015)
- Support uploading a file to FileMaker's container field when using FileMaker Server 13 or later.
- Improve the compatibility with file upload component and Mobile Safari.
- Add the sample application of uploading a file to FileMaker's container field in the 
  "Sample_webpage" directory and update the sample database (TestDB.fmp12).
- Calculated property can use the unbound fields as items in the expression. You don't need to set the target
  (like qty@style.color) in the "field" of "calculation", just set the field name.
- Update phpseclib to version 0.3.10.
- Change SHA-1 JavaScript library.
  (tiny-sha1 <https://code.google.com/p/tiny-sha1/> is contained in the INTER-Mediator.)
- Improve error handling in DB_FileMaker_FX class when loading FX.php.
- Avoid using the @-operator for error suppression in NotifyServer.php to reduce bug risk.